--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+src/styles/*.css
+src/styles/*.css.map
+src/styles/*/*.css
+src/styles/*/*.css.map
