--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/socket.io-client": "^3.0.0",
     "axios": "^1.5.0",
     "deepl": "^1.0.13",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
