--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-localization": "^1.0.19",
     "react-router-dom": "^6.15.0",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "tailwindcss": "^3.3.3"
   }
 }
